<resources>
    <string name="app_name">calculator</string>
    <string name="main_0">0</string>
    <string name="ac">AC</string>
    <string name="negative">+/-</string>
    <string name="procent">%</string>
    <string name="division">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplycation">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="substraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="adding">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="_3">3</string>
    <string name="search">🔍︎</string>
    <string name="destoy_everything">destoy everything</string>
    <string name="tap_here">нажми сюда</string>
</resources>