<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/button_toSecondActiviry"
            android:layout_width="30mm"
            android:layout_height="60dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/tap_here"
            android:textSize="15sp"
            tools:ignore="InOrMmUsage"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="30dp"
            android:text="@string/main_0"
            android:textColor="@color/white"
            android:textSize="80sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ac"
                style="@style/Grey.Button"
                android:text="@string/ac"
                android:onClick="onOperationClick"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_negstive"

                style="@style/Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/negative"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_procent"
                style="@style/Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/procent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_division"
                style="@style/Orange.Button"
                android:text="@string/division"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_7"
                style="@style/Dark_Grey.Button"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_8"
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_9"
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_multiplycation"
                style="@style/Orange.Button"
                android:text="@string/multiplycation"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_4"
                style="@style/Dark_Grey.Button"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_5"
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_6"
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_substraction"
                style="@style/Orange.Button"
                android:text="@string/substraction"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_1"
                style="@style/Dark_Grey.Button"
                android:text="@string/_1"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_2"
                style="@style/Dark_Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/_2"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_3"
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/_3"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_adding"
                style="@style/Orange.Button"
                android:text="@string/adding"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_0"
                style="@style/Dark_Grey.Button"
                android:layout_width="178dp"
                android:layout_marginHorizontal="17dp"
                android:paddingStart="30dp"
                android:text="@string/_0"

                android:textAlignment="textStart"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_point"
                style="@style/Dark_Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/point"
                android:onClick="onOperationClick"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_equals"
                style="@style/Orange.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/equal" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>